--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <div>
         <h1>GitHub Collab</h1>
+        <p>Favorite Games</p>
+        <ul>
+            <l1>Dishonored</l1>
+            <l1></l1>
+            <l1></l1>
+        </ul>
     </div>
 </body>
 </html>
